# frameshot

./: .gitignore  CMakeLists.txt  TODO  common.h  frameshot.c  input.h  output.c  output.h  utils.c  utils.h
input/: dirac.c  dirac.h  y4m.c  y4m.h
